[vector] Fix unsigned comparison crashes on x86 CPUs with UseAVX=1

XMLWordPrintable

      vectorIntrinsics crashes on macos with

        Internal Error (/opt/mesos/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S82011/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/09d6fc52-55bb-4517-9fd8-4fd8ffa46634/runs/e5d43fbe-64a4-4bf2-a73f-16ab2d32aa05/workspace/open/src/hotspot/cpu/x86/assembler_x86.cpp:4464), pid=73411, tid=23299
      # assert(vector_len == AVX_128bit? VM_Version::supports_avx() : vector_len == AVX_256bit? VM_Version::supports_avx2() : vector_len == AVX_512bit? VM_Version::supports_evex() : 0) failed:
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-internal+0-LTS-2021-05-17-1649499.ekaterina.pavlova.panama-vector)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-internal+0-LTS-2021-05-17-1649499.ekaterina.pavlova.panama-vector, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)

      when running from vectorIntrinsics branch with "-ea -esa -Xbatch -XX:-TieredCompilation" flags.

      The list of crashed tests:
       jdk/incubator/vector/ShortMaxVectorTests.java
       jdk/incubator/vector/Short128VectorTests.java
       jdk/incubator/vector/IntMaxVectorTests.java
       jdk/incubator/vector/Int128VectorTests.java

            Assignee:
            Jie Fu
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: