8267294: [vector] Fix unsigned comparison crashes on x86 CPUs with UseAVX=1